microservices_traffic/dev_local/deploy/book.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-app
  labels:
    app: books-app
    service: books-app
spec:
  ports:
    - port: 2200
      name: http
  selector:
    app: books-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-app-v1
  labels:
    app: books-app
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: books-app
      version: v1
  template:
    metadata:
      labels:
        app: books-app
        version: v1
    spec:
      serviceAccountName: bookinfo-books-app
      containers:
        - name: books-app
          image: books_t
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-app-v2
  labels:
    app: books-app
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: books-app
      version: v2
  template:
    metadata:
      labels:
        app: books-app
        version: v2
    spec:
      serviceAccountName: bookinfo-books-app
      containers:
        - name: books-app
          image: books_t
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2200
