microservices_traffic/dev_local/deploy/rmq.yaml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rabbitmq-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 5672
        name: amqp
        protocol: TCP
      hosts:
        - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rabbitmq-app
  namespace: istio-system
spec:
  host: rabbitmq-app
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq-vs
  namespace: istio-system
spec:
  gateways:
    - rabbitmq-gateway
  #  - mesh
  hosts:
    - "*"
  tcp:
    - match:
        - port: 5672
      route:
        - destination:
            host: rabbitmq-app
            port:
              number: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-app
  #namespace: istio-system
  labels:
    app: rabbitmq-app
    service: rabbitmq-app
spec:
  ports:
    - port: 5672
      name: tcp
  selector:
    app: rabbitmq-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-app
  labels:
    app: rabbitmq-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-app
  template:
    metadata:
      labels:
        app: rabbitmq-app
    spec:
      serviceAccountName: service-rabbitmq-app
      containers:
        - name: rabbitmq-app
          image: rabbitmq
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5672
