microservices_traffic/dev_local/deploy/route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: books-app
spec:
  host: books-app
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books-app
spec:
  gateways:
    - books-app-gateway
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: books-app
            subset: v1
          weight: 50
        - destination:
            host: books-app
            subset: v2
          weight: 50
